--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&family=Dancing+Script:wght@600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <title>my portofolio</title>
+    <title>My Portofolio</title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         </nav>
         <!--footer-->
         <div class="footer">
-            <p>&copy; copyright 2023 <br> designed by <a href="">kerolos monir</a></p>
+            <p>&copy; copyright 2023 <br> designed by <a href="">Kerolos Monir</a></p>
         </div>
     </header>
 
@@ -69,9 +69,7 @@
         <section id="about">
             <h2 class="heading">About Me</h2>
             <div class="divider"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, eaque doloribus vitae laudantium atque
-                natus fuga hic odio quas sequi necessitatibus, nobis, alias corporis. Doloribus laboriosam repellat
-                modi dignissimos nam.</p>
+            <p>my name is <span>kerolos monir</span><br> i am a frontend developer</p>
 
             <div class="about-col">
 
@@ -83,11 +81,11 @@
                 <!--information-->
                 <div class="info-col">
                     <h3>Front End Developer!</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod obcaecati velit iure quae esse hic
-                        qui
-                        aspernatur, voluptas quaerat facilis omnis assumenda maiores mollitia fuga dolorum, inventore
-                        eaque
-                        sunt culpa.</p>
+                    <p>Front-end web development, also known as client-side development, is the practice of producing
+                        HTML, CSS, and JavaScript for a website or web application so that the user can directly see and
+                        interact with it. The challenge associated with front-end development is that the tools and
+                        techniques used to create the front-end of a website are constantly changing and so the
+                        developer needs to always be aware of how the field is evolving.</p>
 
                     <div class="icon-list">
 
@@ -124,11 +122,9 @@
         <!--portofolio section start-->
 
         <section id="portofolio">
-            <h2 class="heading">portofolio</h2>
+            <h2 class="heading">Portofolio</h2>
             <div class="divider"></div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur velit, quis nobis magni reiciendis
-                quod impedit quidem nesciunt eaque alias eligendi praesentium vero, laudantium saepe, exercitationem
-                ducimus quo optio repudiandae.</p>
+
 
 
             <div class="port-row">
@@ -140,8 +136,8 @@
                     </div>
                     <div class="port-info">
                         <h4>wordpress</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, doloremque?</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <a href="https://kerolosm.github.io/Simple-House/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <!--portofolio item2-->
@@ -151,8 +147,8 @@
                     </div>
                     <div class="port-info">
                         <h4>wordpress</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, doloremque?</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <a href="https://kerolosm.github.io/cafe/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <!--portofolio item3-->
@@ -162,8 +158,8 @@
                     </div>
                     <div class="port-info">
                         <h4>wordpress</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, doloremque?</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <p>Lorem ipsum dolor sit amet Consectetur</p>
+                        <a href="https://kerolosm.github.io/template-one/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <!--portofolio item4-->
@@ -174,8 +170,8 @@
                     </div>
                     <div class="port-info">
                         <h4>wordpress</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, doloremque?</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <p>Lorem ipsum dolor sit amet Consectetur</p>
+                        <a href="https://kerolosm.github.io/template-two/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <!--portofolio item5-->
@@ -186,7 +182,7 @@
                     </div>
                     <div class="port-info">
                         <h4>wordpress</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, doloremque?</p>
+                        <p>Lorem ipsum dolor sit amet Consectetur</p>
                         <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -198,7 +194,7 @@
                     </div>
                     <div class="port-info">
                         <h4>wordpress</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, doloremque?</p>
+                        <p>Lorem ipsum dolor sit amet Consectetur</p>
                         <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -208,7 +204,7 @@
 
         <!-- services section start-->
         <section id="contact">
-            <h2 class="heading">contact</h2>
+            <h2 class="heading">Contact</h2>
             <div class="divider"></div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur velit, quis nobis magni reiciendis
                 quod impedit quidem nesciunt eaque alias eligendi praesentium vero, laudantium saepe, exercitationem
@@ -250,20 +246,20 @@
                     <!--map-->
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27436.749798610566!2d30.78669742227633!3d30.72981997482321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f62e28d5eed9bd%3A0xa31e88b7d41d812f!2z2KfZhNmG2KzZitmE2KnYjCDZhdix2YPYsiDZg9mI2YUg2K3Zhdin2K_YqdiMINin2YTYqNit2YrYsdip!5e0!3m2!1sar!2seg!4v1677602142060!5m2!1sar!2seg"
-                        width="100%" height="250" style="border:4;"  loading="lazy"
+                        width="100%" height="250" style="border:4;" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 </div>
                 <div class="contact-right">
-  <form action="">
+                    <form action="">
 
 
-    <input type="text" name="name" id="name" placeholder="Your Name">
-    <input type="email" name="email" id="email" placeholder="Yuor Email">
-    <input type="text" name="subject" id="subject" placeholder="Subject">
-    <textarea name="msg" id="msg"  rows="9" placeholder="Your Message"></textarea>
-    <input type="submit" value="Send Message">
-  </form>
+                        <input type="text" name="name" id="name" placeholder="Your Name">
+                        <input type="email" name="email" id="email" placeholder="Your Email">
+                        <input type="text" name="subject" id="subject" placeholder="Subject">
+                        <textarea name="msg" id="msg" rows="9" placeholder="Your Message"></textarea>
+                        <input type="submit" value="Send Message">
+                    </form>
                 </div>
 
 
