--- a/index.html
+++ b/index.html
@@ -178,24 +178,24 @@
 
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="images/Screenshot 2023-03-01 193706.png" alt="">
+                        <img src="images/bootstrap.png" alt="">
                     </div>
                     <div class="port-info">
                         <h4>wordpress</h4>
                         <p>Lorem ipsum dolor sit amet Consectetur</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://kerolosm.github.io/bootstrap-template/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <!--portofolio item6-->
 
                 <div class="port-item">
                     <div class="port-img">
-                        <img src="images/Screenshot 2023-03-01 193706.png" alt="">
+                        <img src="images/linkedin.png" alt="">
                     </div>
                     <div class="port-info">
-                        <h4>wordpress</h4>
+                        <h4>Linkedin</h4>
                         <p>Lorem ipsum dolor sit amet Consectetur</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href=" https://kerolosm.github.io/Linkedin/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
         </section>
@@ -262,39 +262,11 @@
                     </form>
                 </div>
 
-
-
-
-
             </div>
         </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="js/main.js"></script>
 </body>
